--- a/assets/user-login.html
+++ b/assets/user-login.html
@@ -107,7 +107,7 @@
                 </div>
               </div>
               <div class="footer-link padding-top--24">
-                <span>Don't have an account? <a href="REG/signup.html">Sign up</a></span>
+                <span>Don't have an account? <a href="user-signup.html">Sign up</a></span>
                 <div class="listing padding-top--24 padding-bottom--24 flex-flex center-center">
                   <span><a href="#">BOGE</a></span>
                   <span><a href="#">Contact</a></span>
