--- a/assets/user-signup.html
+++ b/assets/user-signup.html
@@ -70,7 +70,7 @@
              
               <div class="formbold-form-wrapper">
                      <img src="">
-                <form action="" method="POST">
+                <form action="../handlers/user-register.handl.php" method="POST">
                   <div class="formbold-input-wrapp formbold-mb-3">
                     <label for="firstname" class="formbold-form-label"> Name </label>
             
@@ -198,7 +198,7 @@
                     </label>
                     <input
                       type="potion"
-                      name=""
+                      name="position"
                       id=""
                       placeholder="ex:student"
                       class="formbold-form-input formbold-form-file"
