--- a/assets/index.html
+++ b/assets/index.html
@@ -95,7 +95,7 @@
                                     </div>
                                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                                 </div>
-                                <a href="users/USER LOGIN.html" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block"> LOG IN / REGESTION<i class="fa fa-arrow-right ms-3"></i></a>
+                                <a href="user-login.html" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block"> LOG IN / REGESTION<i class="fa fa-arrow-right ms-3"></i></a>
                             </div>
                         </nav>
                     </div>
