--- a/assets/user-login.html
+++ b/assets/user-login.html
@@ -78,7 +78,7 @@
               <div class="formbg">
                 <div class="formbg-inner padding-horizontal--48">
                   <span class="padding-bottom--15">Sign in to your account</span>
-                  <form id="stripe-login">
+                  <form id="stripe-login" method="POST" action="../handlers/user-login.handl.php">
                     <div class="field padding-bottom--24">
                       <label for="email">Email</label>
                       <input type="email" name="email">
